fixed package e sonar